--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -1,6 +1,39 @@
 .header {
+    position: relative;
     padding-top: 50px;
     padding-bottom: 41px;
+    background-color: #fff;
+    // background-image: url('../img/header/header-bg.jpg');
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+
+
+    &::before {
+        position: absolute;
+        content: "";
+        background-image: url("../img/header/header-bg1.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        // backdrop-filter: blur(5px);
+        opacity: 0.5;
+        height: 100%;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+    }
+}
+
+.header--gray {
+    background-color: #EAEFF2;
 }
 
 .header__content {
@@ -8,71 +41,79 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 2px solid #000;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    // background-color: #fff;
 }
 
 .header__title-link {
     text-decoration: none;
     color: #000;
-}
-
-.header__title {
     margin: 0;
     margin-bottom: 39px;
     font-weight: 700;
     font-size: 38px;
     line-height: 130%;
     text-transform: uppercase;
+
+    @media (max-width: 1440px) {
+        font-size: 32px;
+        line-height: 100%;
+    }
+
+    @media (max-width: 1024px) {
+        font-size: 28px;
+    }
+
+    @media (max-width: 768px) {
+        font-size: 25px;
+    }
+
+    @media (max-width: 500px) {
+
+    }
 }
 
-// .header__nav.header__nav.header__list {
-//     margin: 0;
-//     padding: 0;
-//     display: flex;
+.header__title {
+    // margin: 0;
+    // margin-bottom: 39px;
+    // font-weight: 700;
+    // font-size: 38px;
+    // line-height: 130%;
+    // text-transform: uppercase;
+    
 
-// }
+    // @media (max-width: 1440px) {
+    //     font-size: 32px;
+    //     line-height: 100%;
+    // }
 
-// ..header__nav.header__list__item {
-//     margin: 0;
-//     margin-right: 59px;
-//     list-style-type: none;
+    // @media (max-width: 1024px) {
+    //     font-size: 28px;
+    // }
 
-//     &:last-child {
-//         margin-right: 0;
-//     }
-// }
+    // @media (max-width: 768px) {
+    //     font-size: 25px;
+    // }
 
-// .item__link {
-//     padding: 8px;
-//     font-weight: 700;
-//     font-size: 16px;
-//     line-height: 130%;
-//     text-transform: uppercase;
-//     text-decoration: none;
-//     color: #000;
-//     transition: color 0.2s ease-in;
+    // @media (max-width: 500px) {
 
-//     &:hover {
-//         color: #c3cfde;
-//     }
-// }
+    // }
+}
 
-// .item__link--active {
-//     color: #FF343D;
-// }
-
-
-nav ul {
+.header__nav {
+    margin: 0;
+    padding: 0;
     list-style: none;
     text-align: center;
-    padding: 0;
-    margin: 0;
 }
 
-nav ul li {
+.nav__item {
     display: inline-block;
 }
 
-nav ul li a {
+.item__link {
     display: block;
     padding: 15px;
     text-decoration: none;
@@ -82,28 +123,26 @@ nav ul li a {
     margin: 0 10px;
 }
 
-.active {
-    color: red;
+.item__link--active {
+    color: #1d2ae2;
 }
 
-nav ul li a,
-nav ul li a:after,
-nav ul li a:before {
+.item__link,
+.item__link:after,
+.item__link:before {
     transition: all .5s;
 }
 
-nav ul li a:hover {
+.item__link:hover {
     color: #555;
 }
-  
+
 /* stroke */
-nav.stroke ul li a,
-nav.fill ul li a {
+.item__link {
     position: relative;
 }
 
-nav.stroke ul li a:after,
-nav.fill ul li a:after {
+.item__link:after {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -112,50 +151,39 @@ nav.fill ul li a:after {
     width: 0%;
     content: '.';
     color: transparent;
-    background: #aaa;
+    background: #000;
     height: 1px;
 }
-nav.stroke ul li a:hover:after {
+
+.item__link:hover:after {
     width: 100%;
 }
-  
-nav.fill ul li a {
-    transition: all 2s;
-}
-  
-nav.fill ul li a:after {
-    text-align: left;
-    content: '.';
-    margin: 0;
-    opacity: 0;
-}
-
-nav.fill ul li a:hover {
-    color: #fff;
-    z-index: 1;
-}
-
-nav.fill ul li a:hover:after {
-    z-index: -10;
-    animation: fill 1s forwards;
-    -webkit-animation: fill 1s forwards;
-    -moz-animation: fill 1s forwards;
-    opacity: 1;
-}
-
+   
 /* Keyframes */
-@-webkit-keyframes fill {
+@-webkit-keyframes circle {
     0% {
-      width: 0%;
-      height: 1px;
+        width: 1px;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        margin: auto;
+        height: 1px;
+        z-index: -1;
+        background: #eee;
+        border-radius: 100%;
     }
-    50% {
-      width: 100%;
-      height: 1px;
-    }
+
     100% {
-      width: 100%;
-      height: 100%;
-      background: #333;
+        background: #aaa;
+        height: 5000%;
+        width: 5000%;
+        z-index: -1;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        border-radius: 0;
     }
 }
