--- a/less/main.less
+++ b/less/main.less
@@ -1,3 +1,9 @@
 @import "blocks/_base.less";
 @import "blocks/_header.less";
 @import "blocks/_about-us.less";
+@import "blocks/_status.less";
+@import "blocks/_new-projects.less";
+@import "blocks/_footer.less";
+@import "blocks/_portfolio.less";
+@import "blocks/_about-project.less";
+@import "blocks/_contacts.less";
