--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,39 @@ body {
   padding-right: 10px;
 }
 .header {
+  position: relative;
   padding-top: 50px;
   padding-bottom: 41px;
+  background-color: #fff;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 1;
+}
+.header::before {
+  position: absolute;
+  content: "";
+  background-image: url("../img/header/header-bg1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.5;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.header--gray {
+  background-color: #EAEFF2;
 }
 .header__content {
   display: -webkit-box;
@@ -34,12 +65,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border: 2px solid #000;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .header__title-link {
   text-decoration: none;
   color: #000;
-}
-.header__title {
   margin: 0;
   margin-bottom: 39px;
   font-weight: 700;
@@ -47,16 +79,32 @@ body {
   line-height: 130%;
   text-transform: uppercase;
 }
-nav ul {
+@media (max-width: 1440px) {
+  .header__title-link {
+    font-size: 32px;
+    line-height: 100%;
+  }
+}
+@media (max-width: 1024px) {
+  .header__title-link {
+    font-size: 28px;
+  }
+}
+@media (max-width: 768px) {
+  .header__title-link {
+    font-size: 25px;
+  }
+}
+.header__nav {
+  margin: 0;
+  padding: 0;
   list-style: none;
   text-align: center;
-  padding: 0;
-  margin: 0;
 }
-nav ul li {
+.nav__item {
   display: inline-block;
 }
-nav ul li a {
+.item__link {
   display: block;
   padding: 15px;
   text-decoration: none;
@@ -65,25 +113,23 @@ nav ul li a {
   text-transform: uppercase;
   margin: 0 10px;
 }
-.active {
-  color: red;
+.item__link--active {
+  color: #1d2ae2;
 }
-nav ul li a,
-nav ul li a:after,
-nav ul li a:before {
+.item__link,
+.item__link:after,
+.item__link:before {
   -webkit-transition: all .5s;
   transition: all .5s;
 }
-nav ul li a:hover {
+.item__link:hover {
   color: #555;
 }
 /* stroke */
-nav.stroke ul li a,
-nav.fill ul li a {
+.item__link {
   position: relative;
 }
-nav.stroke ul li a:after,
-nav.fill ul li a:after {
+.item__link:after {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -92,53 +138,44 @@ nav.fill ul li a:after {
   width: 0%;
   content: '.';
   color: transparent;
-  background: #aaa;
+  background: #000;
   height: 1px;
 }
-nav.stroke ul li a:hover:after {
+.item__link:hover:after {
   width: 100%;
 }
-nav.fill ul li a {
-  -webkit-transition: all 2s;
-  transition: all 2s;
-}
-nav.fill ul li a:after {
-  text-align: left;
-  content: '.';
-  margin: 0;
-  opacity: 0;
-}
-nav.fill ul li a:hover {
-  color: #fff;
-  z-index: 1;
-}
-nav.fill ul li a:hover:after {
-  z-index: -10;
-  animation: fill 1s forwards;
-  -webkit-animation: fill 1s forwards;
-  -moz-animation: fill 1s forwards;
-  opacity: 1;
-}
 /* Keyframes */
-@-webkit-keyframes fill {
+@-webkit-keyframes circle {
   0% {
-    width: 0%;
+    width: 1px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
     height: 1px;
-  }
-  50% {
-    width: 100%;
-    height: 1px;
+    z-index: -1;
+    background: #eee;
+    border-radius: 100%;
   }
   100% {
-    width: 100%;
-    height: 100%;
-    background: #333;
+    background: #aaa;
+    height: 5000%;
+    width: 5000%;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 0;
   }
 }
 .about-us {
   background-color: #F5F7FA;
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-bottom: 60px;
 }
 .about-us__content {
   display: -webkit-box;
@@ -205,6 +242,10 @@ nav.fill ul li a:hover:after {
   line-height: 170%;
   color: #000000;
 }
+.item__desc a {
+  text-decoration: none;
+  color: #1d2ae2;
+}
 .benefits__title {
   margin: 0;
   margin-bottom: 15px;
@@ -256,10 +297,6 @@ nav.fill ul li a:hover:after {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.skills-wrap:last-child {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
 .skills__item {
   width: 15%;
   display: -webkit-box;
@@ -288,5 +325,425 @@ nav.fill ul li a:hover:after {
   margin: 0;
   font-size: 18px;
   line-height: 150%;
+}
+.status {
+  margin-bottom: 76px;
+}
+.status__link {
+  text-decoration: none;
+}
+.status__content {
+  width: 100%;
+  padding: 20px 50px 20px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #F5F7FA;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.status__content:hover {
+  -webkit-box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.3);
+          box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.3);
+  border-radius: 8px;
+  background: #E9EFF8;
+  border-color: #1647ED;
+}
+.status__left {
+  margin: 0;
+  padding: 5px 10px;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 130%;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #1647ED;
+  border-radius: 3px;
+}
+.status__mid {
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: #1647ED;
+}
+.new-projects {
+  margin-bottom: 50px;
+}
+.new-projects__title {
+  margin: 0;
+  margin-bottom: 49px;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 130%;
+  color: #000000;
+}
+.new-projects__title a {
+  color: #000;
+  -webkit-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+.new-projects__title a:hover {
+  color: #1d2ae2;
+}
+.cards__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.card {
+  width: 49%;
+  text-decoration: none;
+}
+.cards__wrap :hover .card__main {
+  -webkit-transform: translateY(-10%);
+          transform: translateY(-10%);
+}
+.cards__wrap :hover .card__img {
+  opacity: 0.6;
+}
+.cards__wrap :hover .card__hidden {
+  -webkit-transform: translateY(-35%);
+          transform: translateY(-35%);
+}
+.card__main {
+  position: relative;
+  margin-bottom: 40px;
+  padding: 20px 20px 30px 20px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.3);
+          box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.3);
+  z-index: 2;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.card__main:last-child {
+  margin-bottom: 0;
+}
+.card__main:nth-last-child(2) {
+  margin-bottom: 0;
+}
+.card__badge {
+  position: absolute;
+  padding: 5px 10px;
+  background-color: #000;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 120%;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  z-index: 3;
+}
+.card__img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.card__desc {
+  margin: 0;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 120%;
+  color: #000000;
+}
+.card__hidden {
+  margin: 0;
+  padding: 20px;
+  -webkit-transform: translateY(-150%);
+          transform: translateY(-150%);
+  background-color: rgba(126, 155, 189, 0.3);
+  -webkit-box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.3);
+          box-shadow: 0px 10px 40px rgba(126, 155, 189, 0.3);
+  z-index: 1;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.card__hidden p {
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: #000;
+}
+.footer {
+  padding-top: 43px;
+  padding-bottom: 43px;
+  background-color: #131313;
+}
+.footer__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.socials__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.socials__link:last-child {
+  margin-right: 0;
+}
+.socials__link:hover {
+  -webkit-box-shadow: 0 0 15px #ffffff;
+          box-shadow: 0 0 15px #ffffff;
+}
+.portfolio {
+  padding-top: 60px;
+  padding-bottom: 90px;
+}
+.portfilio__title {
+  margin: 0;
+  margin-bottom: 78px;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 130%;
+  text-align: center;
+  color: #000000;
+}
+.portfolio__pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.pagination__prev,
+.pagination__next {
+  margin-right: 15px;
+  padding: 5px 20px;
+  background-color: #EAEFF2;
+  border-radius: 3px;
+  text-decoration: none;
+  -webkit-transition: background-color 0.2s ease-in;
+  transition: background-color 0.2s ease-in;
+}
+.pagination__prev p,
+.pagination__next p {
+  margin: 0;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000000;
+}
+.pagination__prev:last-child,
+.pagination__next:last-child {
+  margin-right: 0;
+}
+.pagination__prev:hover,
+.pagination__next:hover {
+  background-color: #DDE8F6;
+}
+.pagination__prev:active,
+.pagination__next:active {
+  background-color: #C3CFDE;
+}
+.pagination__item {
+  margin: 0;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+  text-transform: uppercase;
+  margin-right: 15px;
+  padding: 5px 20px;
+  background-color: #EAEFF2;
+  border-radius: 3px;
+  text-decoration: none;
+  color: #000;
+}
+.pagination__item:last-child {
+  margin-right: 0;
+}
+.pagination__item p {
+  margin: 0;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+.pagination__item--active {
+  background-color: rgba(139, 177, 223, 0.3);
+}
+.project {
+  padding-top: 60px;
+  padding-bottom: 90px;
+}
+.project__content {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.project__title {
+  margin: 0;
+  margin-bottom: 43px;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 130%;
+  text-align: center;
+}
+.project__img {
+  width: 100%;
+  margin-bottom: 60px;
+  -webkit-filter: drop-shadow(0px 10px 40px rgba(126, 155, 189, 0.3));
+          filter: drop-shadow(0px 10px 40px rgba(126, 155, 189, 0.3));
+}
+.project__desc {
+  margin-bottom: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 80%;
+}
+.desc__title {
+  margin: 0;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 130%;
+}
+.desc__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 65%;
+}
+.desc__about {
+  margin-bottom: 40px;
+}
+.about__text {
+  margin: 0;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 170%;
+}
+.numbers__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 1em;
+}
+.numbers__item p {
+  margin: 0;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 130%;
+}
+.numbers__item:last-child {
+  margin-bottom: 0;
+}
+.numbers__title {
+  color: #000;
+}
+.numbers__value {
+  color: #7E9BBD;
+}
+.desc__tech {
+  margin-bottom: 40px;
+}
+.tech__list {
+  margin: 0;
+  padding: 0;
+  padding-left: 22px;
+}
+.list__item {
+  font-size: 18px;
+  line-height: 150%;
+  margin-bottom: 10px;
+}
+.desc__link a {
+  font-size: 18px;
+  line-height: 170%;
+  color: #1647ED;
+  text-decoration: none;
+}
+.project_btn {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.btn__prev,
+.btn__next {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 50%;
+  font-size: 16px;
+  line-height: 130%;
+  text-align: center;
+  color: #7E9BBD;
+  text-decoration: none;
+  border: 1px solid rgba(126, 155, 189, 0.3);
+}
+.btn__prev:hover,
+.btn__next:hover {
+  background-color: #EFF6FB;
+  color: #4374AD;
+}
+.btn__prev:active,
+.btn__next:active {
+  background-color: #9BC3DC;
+  color: #FFFFFF;
+}
+.btn__prev {
+  border-radius: 8px 0px 0px 8px;
+}
+.btn__next {
+  border-radius: 0px 8px 8px 0px;
 }
 /*# sourceMappingURL=main.css.map */
