--- a/less/blocks/_about-us.less
+++ b/less/blocks/_about-us.less
@@ -2,6 +2,7 @@
     background-color: #F5F7FA;
     padding-top: 60px;
     padding-bottom: 60px;
+    margin-bottom: 60px;
 }
 
 .about-us__content {
@@ -61,6 +62,11 @@
     font-size: 18px;
     line-height: 170%;
     color: #000000;
+
+    a {
+        text-decoration: none;
+        color: #1d2ae2;
+    }
 }
 
 .benefits__title {
@@ -114,10 +120,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    &:last-child {
-        justify-content: space-around;
-    }
 }
 
 .skills__item {
