--- a/less/main.less
+++ b/less/main.less
@@ -7,3 +7,5 @@
 @import "blocks/_portfolio.less";
 @import "blocks/_about-project.less";
 @import "blocks/_contacts.less";
+@import "blocks/_facts.less";
+@import "blocks/_feedback.less";
