--- a/less/blocks/_about-us.less
+++ b/less/blocks/_about-us.less
@@ -2,7 +2,7 @@
     background-color: #F5F7FA;
     padding-top: 60px;
     padding-bottom: 60px;
-    margin-bottom: 60px;
+    // margin-bottom: 60px;
 }
 
 .about-us__content {
@@ -138,7 +138,11 @@
 
     &:hover {
         // transform: translateY(-10px);
-        transform: scale(1.2);
+        transform: scale(1.1);
+    }
+
+    @media (max-width: 845px) {
+        width: 40%;
     }
 }
 
